Make home active

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#HomePage"><i class="fa fa-home">
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home">
                 </i> Home</a></li>
             <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Photos">
                 <i class="fa fa-camera"></i> Photos</a></li>
@@ -46,7 +46,7 @@
                 <i class="fa fa-video-camera"></i> Videos</a></li>
             <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Music">
                 <i class="fa fa-music"></i> Music</a></li>
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#BotPage">
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#BotPage">
                     <i class="fa fa-android"></i> JokeBot</a></li>
             <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-toggle="tab" href="#PlaylistPage">
                 <i class="fa fa-spotify"></i> Playlist</a></li>
@@ -63,7 +63,7 @@
 <div class="container-fluid">
 <div class="tab-content">
 
-	<div class="tab-pane" id="HomePage">
+	<div class="tab-pane show active" id="HomePage">
         <div class="row">
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
                 <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left mt-3 " alt="John Kauflin photo" width="90%">
@@ -116,7 +116,7 @@
 		</div><!-- row -->	                
 	</div><!-- end of Media -->
 
-    <div class="tab-pane show active" id="BotPage">
+    <div class="tab-pane" id="BotPage">
         <div class="row">
 			<div class="col-sm-7 col-lg-6">
                 <h5>Joke Bot</h5>
