--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
                 </div>
 
                 <div class="row ml-1 mb-1">
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Photos" type="button" role="button">
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page shadow-none" data-dir="Photos" type="button" role="button">
                         <i class="fa fa-camera fa-2x float-left"></i> Photos</button>
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Videos" type="button" role="button">
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page shadow-none" data-dir="Videos" type="button" role="button">
                         <i class="fa fa-video-camera fa-2x float-left"></i> Videos</button>
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page shadow-none" data-dir="Music" type="button" role="button">
                         <i class="fa fa-music fa-2x float-left"></i> Music</button>
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile-tab shadow-none" data-dir="Bot" type="button" role="button">
+                        <i class="fa fa-android fa-2x float-left"></i> JokeBot</button>
                 </div>
 
                 <div class="row">
