Adjust placeholder for bot

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <form id="SearchInput" class="form-group" action="#">
                     <div class="input-group mt-2">
                         <input type="text" class="form-control shadow-none" name="searchStr" id="searchStr"
-                            placeholder="Send text to JokeBot (or push Mic to speak)">
+                            placeholder="Text to JokeBot (push Mic to speak)">
                         <div class="input-group-append">
                             <button id="SearchButton" type="button" class="btn btn-primary shadow-none">Send</button>
                         </div>
