--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 			</div>
 			<div class="col-sm-5 col-lg-6">
-                <img id="BotImage" src="Media/images/bot.JPG" class="float-left m-2" width="60%">
+                <img id="BotImage" src="Media/images/botImage.jpg" class="float-left m-2" width="60%">
             </div>
 		</div><!-- row -->	                
 	</div><!-- end of Bot -->
