--- a/index.html
+++ b/index.html
@@ -21,53 +21,51 @@
     <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-    <link rel="stylesheet" href="css/main.css?ver=4.011">
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZHJYFB7JT"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-DZHJYFB7JT');
-    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
+    <link rel="stylesheet" href="css/main.css?ver=4.014">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a class="navbar-brand" data-toggle="modal" href="#aboutModal">John J Kauflin</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home">
-                </i> Home</a></li>
-            <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Photos">
-                <i class="fa fa-camera"></i> Photos</a></li>
-            <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Videos" >
-                <i class="fa fa-video-camera"></i> Videos</a></li>
-            <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Music">
-                <i class="fa fa-music"></i> Music</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#BotPage">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
+    <div class="container-fluid">
+        <a class="navbar-brand" data-bs-toggle="modal" data-bs-target="#aboutModal" href="#aboutModal">John J Kauflin</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+            <ul class="nav navbar-nav">
+                <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#HomePage">
+                    <i class="fa fa-home" ></i> Home</a></li>
+                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Photos">
+                    <i class="fa fa-camera" style="font-size: 1rem;"></i> Photos</a></li>
+                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Videos" >
+                    <i class="fa fa-video-camera" style="font-size: 1rem;"></i> Videos</a></li>
+                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Music">
+                    <i class="fa fa-music"></i> Music</a></li>
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
                     <i class="fa fa-android"></i> JokeBot</a></li>
-            <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-toggle="tab" href="#PlaylistPage">
-                <i class="fa fa-spotify"></i> Playlist</a></li>
-            <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
-            <!--
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Docs"><i
-                        class="fa fa-file"></i> Docs</a></li>
-            <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
-            -->
-        </ul>
+                <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-bs-toggle="tab" href="#PlaylistPage">
+                    <i class="fa fa-spotify"></i> Playlist</a></li>
+                <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
+                <!--
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#MediaPage" data-dir="Docs"><i
+                            class="fa fa-file"></i> Docs</a></li>
+                <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
+                -->
+            </ul>
+        </div>
     </div>
 </nav>
+
 
 <div class="container-fluid">
 <div class="tab-content">
@@ -75,25 +73,26 @@
 	<div class="tab-pane show active" id="HomePage">
         <div class="row">
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
-                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left mt-3 " alt="John Kauflin photo" width="90%">
+                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="90%">
             </div>
 
             <div class="col-sm-6 col-md-8">
                 <div class="row">
                     <h1 class="m-2 d-none d-sm-block">Welcome!</h1>
                     <p class="m-2">Welcome to the John J Kauflin personal website.</p>
-                    
                 </div>
 
                 <div class="row ml-1 mb-1">
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page shadow-none" data-dir="Photos" type="button" role="button">
-                        <i class="fa fa-camera fa-2x float-left"></i> Photos</button>
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page shadow-none" data-dir="Videos" type="button" role="button">
-                        <i class="fa fa-video-camera fa-2x float-left"></i> Videos</button>
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page shadow-none" data-dir="Music" type="button" role="button">
-                        <i class="fa fa-music fa-2x float-left"></i> Music</button>
-                    <button class="btn btn-info float-left mt-2 mr-2 link-tile-tab shadow-none" data-dir="Bot" type="button" role="button">
-                        <i class="fa fa-android fa-2x float-left"></i> JokeBot</button>
+                    <div class="container-fluid ">
+                        <button class="btn btn-primary float-left mt-2 mr-2 link-tile media-page" data-dir="Photos" type="button" role="button">
+                            <i class="fa fa-camera fa-2x float-start"></i> Photos</button>
+                        <button class="btn btn-primary float-left mt-2 mr-2 link-tile media-page" data-dir="Videos" type="button" role="button">
+                            <i class="fa fa-video-camera fa-2x float-start"></i> Videos</button>
+                        <button class="btn btn-primary float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
+                            <i class="fa fa-music fa-2x float-start"></i> Music</button>
+                        <button class="btn btn-primary float-left mt-2 mr-2 link-tile-tab" data-dir="Bot" type="button" role="button">
+                            <i class="fa fa-android fa-2x float-start"></i> JokeBot</button>
+                    </div>
                 </div>
 
                 <div class="row">
@@ -195,13 +194,12 @@
 </div><!-- end of main container -->
 
 <!-- Modal -->
-<div class="modal fade" id="aboutModal" role="dialog">
+<div class="modal fade" id="aboutModal" tabindex="-1">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
                     <h4 class="modal-title">John J Kauflin</h4>
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
 				<span>
@@ -223,7 +221,7 @@ in bands with a group of friends since High School and we have created a music c
 <br>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
@@ -243,11 +241,13 @@ in bands with a group of friends since High School and we have created a music c
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Bootstrap 5 JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
@@ -259,8 +259,8 @@ in bands with a group of friends since High School and we have created a music c
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.117"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
 
-    <script src="js/util.js?ver=3.011"></script>
-    <script src="js/main.js?ver=3.012"></script>
+    <script src="js/util.js?ver=3.015"></script>
+    <script src="js/main.js?ver=3.016"></script>
     <script src="js/spotify.js?ver=3.011"></script>
     <script src="js/speech.js?ver=1.106"></script>
     <script src="js/bot.js?ver=1.109"></script>
