--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                     <i class="fa fa-video-camera" style="font-size: 1rem;"></i> Videos</a></li>
                 <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Music">
                     <i class="fa fa-music"></i> Music</a></li>
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
+                    <i class="fa fa-info-circle"></i> About</a></li>
+                <!--
+                <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
                     <i class="fa fa-android"></i> JokeBot</a></li>
                 <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-bs-toggle="tab" href="#PlaylistPage">
                     <i class="fa fa-spotify"></i> Playlist</a></li>
-                <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
-                    <i class="fa fa-info-circle"></i> About</a></li>
-                <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
-                <!--
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#MediaPage" data-dir="Docs"><i
                             class="fa fa-file"></i> Docs</a></li>
                 <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
@@ -88,8 +88,10 @@
                             <i class="fa fa-video-camera fa-2x float-start"></i> Videos</button>
                         <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
                             <i class="fa fa-music fa-2x float-start"></i> Music</button>
+                            <!--
                         <button class="btn btn-success mt-2 mr-2 link-tile-tab" data-dir="Bot" type="button" role="button">
                             <i class="fa fa-android fa-2x float-start"></i> JokeBot</button>
+                            -->
                     </div>
                 </div>
 
@@ -126,6 +128,7 @@
 		</div><!-- row -->	                
 	</div><!-- end of Media -->
 
+    <!--
     <div class="tab-pane" id="BotPage">
         <div class="row">
 			<div class="col-sm-7 col-lg-6">
@@ -168,8 +171,8 @@
 			<div class="col-sm-5 col-lg-6">
                 <img id="BotImage" src="Media/images/botImage.jpg" class="float-left m-2" width="60%">
             </div>
-		</div><!-- row -->	                
-	</div><!-- end of Bot -->
+		</div>                
+	</div>
 
     <div class="tab-pane" id="PlaylistPage">
         <div class="row">
@@ -181,14 +184,15 @@
 
 			</div>
 			<div class="col-sm-7 col-md-9">
-                <!-- Need to do the login as a regular request, not an AJAX call from the javascript -->
                 <a id="SpotifyLogin" class="float-right m-2" href="SpotifyLogin.php">
                     <img id="SpotifyIcon" width="35" src="Media/images/Spotify_Icon_RGB_Black.png">
                 </a>
 
             </div>
-		</div><!-- row -->	                
-	</div><!-- end of Playlist -->
+		</div>
+	</div>
+    -->
+
 
     <div class="tab-pane" id="InfoPage">
         <div class="row">
@@ -233,8 +237,6 @@ and being part of a wonderful music community
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -242,25 +244,23 @@ and being part of a wonderful music community
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 
-    <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
     <!--
+    <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
-    -->
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
-
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.002"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
+    -->
+
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.003"></script>
 
     <script src="js/util.js?ver=3.018"></script>
     <script src="js/navtab.js?ver=3.018"></script>
     <script src="js/main.js?ver=3.018"></script>
+    <!--
     <script src="js/spotify.js?ver=3.011"></script>
     <script src="js/speech.js?ver=1.106"></script>
     <script src="js/bot.js?ver=1.109"></script>
-    <!--
     <script src="js/music.js?ver=1.018"></script>
-    <script src="js/googleAnalytics.js?ver=1.001"></script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     -->
 
 </body>
