--- a/index.html
+++ b/index.html
@@ -71,12 +71,15 @@
 	<div class="tab-pane show active" id="HomePage">
         <div class="row">
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
-                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="90%">
+                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="80%">
+                <h1>Welcome!</h1>
             </div>
 
             <div class="col-sm-6 col-md-8">
                 <div class="row">
+                    <!--
                     <h1 class="m-2 d-none d-sm-block">Welcome!</h1>
+                    -->
                     <p class="m-2">Welcome to the John J Kauflin personal website.</p>
                 </div>
 
@@ -97,7 +100,7 @@
 
                 <div class="row">
                         <iframe src="emoncms/dashboard/view?id=3&apikey=38618b096c7f94b4bf7ce190af925037" 
-                            frameborder="0" class="m-3" width="90%" height="600">
+                            frameborder="0" class="m-3" width="95%" height="600">
                         </iframe>
                 </div>
             </div>
