--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 
 	<div class="tab-pane show active" id="HomePage">
         <div class="row">
-            <div class="col-sm-5 col-md-3 d-none d-sm-block">
-                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="80%">
-                <h1>Welcome!</h1>
+            <div class="col-sm-5 col-md-2 d-none d-sm-block">
+                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="90%">
+                <h1 class="ml-2">Welcome!</h1>
             </div>
 
-            <div class="col-sm-6 col-md-8">
+            <div class="col-sm-6 col-md-9">
                 <div class="row">
                     <!--
                     <h1 class="m-2 d-none d-sm-block">Welcome!</h1>
