--- a/index.html
+++ b/index.html
@@ -98,12 +98,10 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col d-none d-sm-block">
+                <div class="row m-0">
                         <iframe src="emoncms/dashboard/view?id=3&apikey=38618b096c7f94b4bf7ce190af925037" 
                             frameborder="0" class="m-3" width="95%" height="600">
                         </iframe>
-                    </div>
                 </div>
             </div>
 
