--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     </div>
                 </div>
 
-                <div class="row m-0">
+                <div class="row">
                         <iframe src="emoncms/dashboard/view?id=3&apikey=38618b096c7f94b4bf7ce190af925037" 
-                            frameborder="0" class="m-3" width="95%" height="600">
+                            frameborder="0" class="mt-3" width="95%" height="600">
                         </iframe>
                 </div>
             </div>
