Test media gallery search

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
                 <div id="MediaConfig" class="float-right m-2"></div>
 				<ol id="MediaBreadcrumbs" class="breadcrumb mt-2 p-1"></ol>
 				<div id="MediaFolders"></div>
+
+                <div id="MediaSearchInput">
+                    <form id="MediaInputValues" class="input-group input-group-sm my-2" action="#">
+                        <input id="MediaSearchStr" type="text" class="form-control" placeholder="Search string" aria-label="Search string" aria-describedby="button-addon2">
+                        <button id="MediaSearchButton" class="btn btn-outline-secondary" type="button" >Search</button>
+                    </form>
+                </div>
+
                 <div id="MediaThumbnails"></div>
             </div>
 		</div><!-- row -->	                
@@ -252,7 +260,7 @@ and being part of a wonderful music community
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
     -->
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.004"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.008"></script>
 
     <script src="js/util.js?ver=3.018"></script>
     <script src="js/navtab.js?ver=3.018"></script>
