--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#HomePage">
                     <i class="fa fa-home" ></i> Home</a></li>
-                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Photos">
+                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-MediaType="1">
                     <i class="fa fa-camera" style="font-size: 1rem;"></i> Photos</a></li>
-                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Videos" >
+                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-MediaType="2" >
                     <i class="fa fa-video-camera" style="font-size: 1rem;"></i> Videos</a></li>
-                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-dir="Music">
+                <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-MediaType="3">
                     <i class="fa fa-music"></i> Music</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
                     <i class="fa fa-info-circle"></i> About</a></li>
@@ -85,11 +85,11 @@
 
                 <div class="row ml-1 mb-1">
                     <div class="container-fluid ">
-                        <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-dir="Photos" type="button" role="button">
+                        <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-MediaType="1" type="button" role="button">
                             <i class="fa fa-camera fa-2x float-start"></i> Photos</button>
-                        <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-dir="Videos" type="button" role="button">
+                        <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-MediaType="2" type="button" role="button">
                             <i class="fa fa-video-camera fa-2x float-start"></i> Videos</button>
-                        <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
+                        <button class="btn btn-success mt-2 mr-2 link-tile media-page" data-MediaType="3" type="button" role="button">
                             <i class="fa fa-music fa-2x float-start"></i> Music</button>
                             <!--
                         <button class="btn btn-success mt-2 mr-2 link-tile-tab" data-dir="Bot" type="button" role="button">
@@ -285,7 +285,7 @@ and being part of a wonderful music community
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
     -->
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.011"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.014"></script>
 
     <script src="js/util.js?ver=3.018"></script>
     <script src="js/navtab.js?ver=3.018"></script>
