--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
@@ -121,14 +121,38 @@
                 </div>
 			</div>
 			<div class="col-sm-7 col-md-9">
-                <button id="MediaSearchButton" type="button" 
-                    class="btn btn-default shadow-none float-end m-2" data-bs-toggle="modal" data-bs-target="#MediaSearchModal">
-                    <i class="fa fa-search"></i>
-                </button>
+                <div id="MediaFilterInputValues" class="container m-2">
+                        <div class="row">
+                            <input id="MediaFilterMediaType" type="hidden" class="form-control form-select-sm" value="1">
+                            <input id="MediaFilterMenuItem" type="hidden" class="form-control form-select-sm" value="">
+                            <input id="MediaFilterAlbumTag" type="hidden" class="form-control form-select-sm" value="">
+                            <div class="col">
+                                <select id="MediaFilterCategory" class="form-select form-select-sm shadow-none ">
+                                    <option value="0">ALL</option>
+                                    <option selected value="1 John J Kauflin">1 John J Kauflin</option>
+                                    <option value="2 John E Kauflin">2 John E Kauflin</option>
+                                    <option value="3 Baker Family">3 Baker Family</option>
+                                    <option value="4 Mann Family">4 Mann Family</option>
+                                    <option value="5 Bands">5 Bands</option>
+                                    <option value="Mementos">Mementos</option>
+                                    <option value="Misc">Misc</option>
+                                    <option value="Albums">Albums</option>
+                                </select>
+                            </div>
+                            <div class="col">
+                                <input id="MediaFilterStartDate" type="date" class="form-control form-select-sm shadow-none" value="2023-01-01">
+                            </div>
+                            <div class="col">
+                                <input id="MediaFilterSearchStr" type="text" class="form-control form-select-sm shadow-none" placeholder="Search string">
+                            </div>
+                            <div class="col-2">
+                                <button id="MediaFilterButton" type="button" class="btn btn-success btn-sm shadow-none">Filter</button>
+                            </div>
+                        </div>
+                </div>
 
-                <div id="MediaConfig" class="float-end m-2"></div>
-				<ol id="MediaBreadcrumbs" class="breadcrumb mt-2 p-1"></ol>
-				<div id="MediaFolders"></div>
+                <div id="MediaFolders">
+                </div>
 
                 <div id="MediaThumbnails"></div>
             </div>
@@ -272,10 +296,8 @@ and being part of a wonderful music community
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 
     <!--
@@ -285,10 +307,10 @@ and being part of a wonderful music community
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
     -->
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.015"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.020"></script>
 
     <script src="js/util.js?ver=3.018"></script>
-    <script src="js/navtab.js?ver=3.018"></script>
+    <script src="js/navtab.js?ver=3.019"></script>
     <script src="js/main.js?ver=3.018"></script>
     <!--
     <script src="js/spotify.js?ver=3.011"></script>
