--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </button>
                         </div>
 
-                        <div class="col-5">
+                        <div class="col">
                             <select id="MediaFilterCategory" class="form-select shadow-none">
                                 <option value="0">ALL</option>
                                 <option selected value="1 John J Kauflin">1 John J Kauflin</option>
