--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
 
                         <div class="col">
-                            <select id="MediaFilterCategory" class="form-select shadow-none">
+                            <select id="MediaFilterCategory" class="form-select float-start shadow-none">
                                 <option value="0">ALL</option>
                                 <option selected value="1 John J Kauflin">1 John J Kauflin</option>
                                 <option value="2 John E Kauflin">2 John E Kauflin</option>
@@ -163,7 +163,7 @@
                             </select>
                         </div>
                         <div class="col-2">
-                            <button id="MediaFilterButton" type="button" class="btn btn-success shadow-none">Filter</button>
+                            <button id="MediaFilterButton" type="button" class="btn btn-success float-start shadow-none">Filter</button>
                         </div>
                     </div>
 
