--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			</div>
 
 			<div class="col-sm-7 col-md-9">
-                <div id="MediaFilterInputValues" class="container m-2">
+                <div id="MediaFilterInputValues" class="container my-2">
                     <div class="row">
                         <input id="MediaFilterMediaType" type="hidden" class="form-control" value="1">
                         <input id="MediaFilterMenuItem" type="hidden" class="form-control" value="">
