--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </button>
                         </div>
 
-                        <div class="col">
+                        <div class="col-5">
                             <select id="MediaFilterCategory" class="form-select float-start shadow-none">
                                 <option value="0">ALL</option>
                                 <option selected value="1 John J Kauflin">1 John J Kauflin</option>
@@ -169,10 +169,10 @@
 
                     <div class="row mt-2">
                         <div class="col">
-                            <input id="MediaFilterStartDate" type="date" class="form-control form-select shadow-none" value="2023-01-01">
+                            <input id="MediaFilterStartDate" type="date" class="form-control shadow-none" value="2023-01-01">
                         </div>
                         <div class="col">
-                            <input id="MediaFilterSearchStr" type="text" class="form-control form-select shadow-none" placeholder="Search string">
+                            <input id="MediaFilterSearchStr" type="text" class="form-control shadow-none" placeholder="Search string">
                         </div>
                     </div>
 
