--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
  
       <div class="offcanvas offcanvas-start" tabindex="-1" id="MediaMenuCanvas" aria-labelledby="MediaMenuCanvasLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="MediaMenuCanvasLabel">Offcanvas</h5>
+          <h5 class="offcanvas-title" id="MediaMenuCanvasLabel">Menu</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
 
-            <div id="MediaMenu"></div>
+            <div id="MediaOffcanvasMenu"></div>
 
         </div>
       </div>
@@ -134,6 +134,7 @@
 			
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
                 <h5 id=MediaHeader></h5>
+                <div id="MediaMenu"></div>
 			</div>
 
 			<div class="col-sm-7 col-md-9">
@@ -334,7 +335,7 @@ and being part of a wonderful music community
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
     -->
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.022"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.023"></script>
 
     <script src="js/util.js?ver=3.018"></script>
     <script src="js/main.js?ver=3.020"></script>
