--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/3.4.0/css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/main.css?ver=4.014">
 </head>
 
@@ -49,7 +49,7 @@
                     <i class="fa fa-music"></i> Music</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
                     <i class="fa fa-info-circle"></i> About</a></li>
-                <!--
+                    <!--
                 <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
                     <i class="fa fa-android"></i> JokeBot</a></li>
@@ -77,9 +77,6 @@
 
             <div class="col-sm-6 col-md-8">
                 <div class="row">
-                    <!--
-                    <h1 class="m-2 d-none d-sm-block">Welcome!</h1>
-                    -->
                     <p class="m-2">Welcome to the John J Kauflin personal website.</p>
                 </div>
 
@@ -99,9 +96,9 @@
                 </div>
 
                 <div class="row">
-                        <iframe src="emoncms/dashboard/view?id=3&apikey=38618b096c7f94b4bf7ce190af925037" 
-                            frameborder="0" class="mt-3" width="100%" height="520">
-                        </iframe>
+                    <iframe src="emoncms/dashboard/view?id=3&apikey=38618b096c7f94b4bf7ce190af925037" 
+                        frameborder="0" class="mt-3" width="100%" height="520">
+                    </iframe>
                 </div>
             </div>
 
@@ -259,7 +256,7 @@
 
 				<span>
                     <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start m-3" alt="John Kauflin photo" width="23%">
-Welcome to my website, and ok, it's mostly about me.  However, I hope this site also reflects the experiences I've had 
+Welcome to my website.  I hope this site also reflects the experiences I've had 
 with all the wonderful friends, family, bandmates, and workmates I've had in my life.  It's been my pleasure to know you all.
 This website is a place where I can collect and present pictures, videos, and music to honor the memory of people and things.  
 				</span>
@@ -326,20 +323,20 @@ and being part of a wonderful music community
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/3.4.0/js/blueimp-gallery.min.js"></script>
 
     <!--
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
-    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
+    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.007"></script>
     -->
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=2.029"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.000"></script>
 
-    <script src="js/util.js?ver=3.018"></script>
-    <script src="js/main.js?ver=3.020"></script>
+    <script src="js/main.js?ver=3.021"></script>
     <!--
+    <script src="js/util.js?ver=3.018"></script>
     <script src="js/spotify.js?ver=3.011"></script>
     <script src="js/speech.js?ver=1.106"></script>
     <script src="js/bot.js?ver=1.109"></script>
