--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <i class="fa fa-music"></i> Music</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
                     <i class="fa fa-info-circle"></i> About</a></li>
-                    <!--
                 <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
+                    <!--
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
                     <i class="fa fa-android"></i> JokeBot</a></li>
                 <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-bs-toggle="tab" href="#PlaylistPage">
@@ -103,8 +103,7 @@
             </div>
 
             <div class="col-sm-1 col-md-1 d-none d-sm-block">
-                <div id="username" class="float-right"></div>
-                <div id="jjkloginEventElement"></div>
+                <div id="jjkloginEventElement" class="float-end"></div>
             </div>
         </div>
 
@@ -329,12 +328,10 @@ and being part of a wonderful music community
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
-    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.007"></script>
     -->
-
+    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.019"></script>
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.000"></script>
-
-    <script src="js/main.js?ver=3.021"></script>
+    <script src="js/main.js?ver=3.022"></script>
     <!--
     <script src="js/util.js?ver=3.018"></script>
     <script src="js/spotify.js?ver=3.011"></script>
