--- a/index.html
+++ b/index.html
@@ -123,12 +123,10 @@
       </div>
 
 	<div class="tab-pane" id="MediaPage">
-        <div class="row">
             <!--
             d-block d-sm-none
             -->
-			<div class="col">
-                <div id="MediaFilterInputValues" class="container-fluid my-2">
+                <div id="MediaFilterInputValues" class="container-fluid my-2 px-0">
                     <div class="row">
                         <input id="MediaFilterMediaType" type="hidden" class="form-control" value="1">
                         <input id="MediaFilterMenuItem" type="hidden" class="form-control" value="">
@@ -140,7 +138,7 @@
                             </button>
                         </div>
                         <div class="col">
-                            <select id="MediaFilterCategory" class="form-select float-end shadow-none">
+                            <select id="MediaFilterCategory" class="form-select float-end shadow-none mx-0">
                                 <option value="0">ALL</option>
                                 <option selected value="1 John J Kauflin">1 John J Kauflin</option>
                                 <option value="2 John E Kauflin">2 John E Kauflin</option>
@@ -185,8 +183,7 @@
                 </div>
                 <div id="MediaThumbnails">
                 </div>
-            </div>
-		</div><!-- row -->	                
+
 	</div><!-- end of Media -->
 
     <!--
