--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>John J Kauflin</title>
-	<meta name="keywords" content="kauflin, jkauflin, jkauflin.com, johnkauflin.com, john kauflin, john j kauflin, jjk, dayton, oh, ohio, personal, web" />
+	<meta name="keywords" content="kauflin, jkauflin, jkauflin.com, johnkauflin, johnkauflin.com, john kauflin, john j kauflin, jjk, dayton, oh, ohio, personal, web" />
 	<meta name="description" content="John J Kauflin personal website" />
 	<meta name="author" content="John J Kauflin" />
 	<meta property="og:url" content="https://johnkauflin.com" />
@@ -123,6 +123,23 @@
 	<div class="tab-pane" id="MediaPage">
 	</div><!-- end of Media -->
 
+    <div class="modal" tabindex="-1" id="MediaModal">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Modal title</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="MediaModalBody"></div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <!--
     <div class="tab-pane" id="BotPage">
         <div class="row">
@@ -216,17 +233,44 @@ and being part of a wonderful music community
 </div><!-- end of main tab content -->
 </div><!-- end of main container -->
 
-	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-	<div id="blueimp-gallery" class="blueimp-gallery">
-		<div class="slides"></div>
-		<h3 class="title"></h3>
-		<a class="prev">‹</a>
-		<a class="next">›</a>
-		<a class="close">×</a>
-		<a class="play-pause"></a>
-		<ol class="indicator"></ol>
-	</div>
-
+    <!-- The Gallery as lightbox dialog, should be a document body child element -->
+    <div
+    id="blueimp-gallery"
+    class="blueimp-gallery blueimp-gallery-contain"
+    aria-label="image gallery"
+    aria-modal="true"
+    role="dialog"
+    >
+    <div class="slides" aria-live="polite"></div>
+        <h3 class="title"></h3>
+        <a
+            class="prev"
+            aria-controls="blueimp-gallery"
+            aria-label="previous slide"
+            aria-keyshortcuts="ArrowLeft"
+        ></a>
+        <a
+            class="next"
+            aria-controls="blueimp-gallery"
+            aria-label="next slide"
+            aria-keyshortcuts="ArrowRight"
+        ></a>
+        <a
+            class="close"
+            aria-controls="blueimp-gallery"
+            aria-label="close"
+            aria-keyshortcuts="Escape"
+        ></a>
+        <a
+            class="play-pause"
+            aria-controls="blueimp-gallery"
+            aria-label="play slideshow"
+            aria-keyshortcuts="Space"
+            aria-pressed="false"
+            role="button"
+        ></a>
+        <ol class="indicator"></ol>
+    </div>
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -234,14 +278,13 @@ and being part of a wonderful music community
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/3.4.0/js/blueimp-gallery.min.js"></script>
-
     <!--
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.207"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.210"></script>
     <script src="js/main.js?ver=3.022"></script>
     <!--
     <script src="js/util.js?ver=3.018"></script>
