--- a/index.html
+++ b/index.html
@@ -140,14 +140,21 @@
 	</div><!-- end of Media -->
 
     <div class="modal" tabindex="-1" id="MediaModal">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
+              <h5 id="MediaModalTitle" class="modal-title"></h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div id="MediaModalBody"></div>
+                <div class="row">
+                    <div class="col">
+                        <div id="MediaModalImg"></div>
+                    </div>
+                    <div class="col">
+                        <div id="MediaModalBody"></div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -174,6 +181,7 @@
           <div class="modal-content">
             <div class="modal-body">
                 <div id="MediaLightboxBody"></div>
+
             </div>
           </div>
         </div>
@@ -284,7 +292,7 @@ and being part of a wonderful music community
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.237" type="module"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.241" type="module"></script>
     <script src="js/main.js?ver=3.030" type="module"></script>
 
     <!--
