Gallery menu and album

--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
             <div id="MediaOffcanvasMenu"></div>
         </div>
     </div>
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="MediaAlbumMenuCanvas" aria-labelledby="MediaAlbumMenuCanvasLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="MediaAlbumMenuCanvasLabel">Albums</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div id="MediaOffcanvasAlbumMenu"></div>
+        </div>
+    </div>
 
 	<div class="tab-pane" id="MediaPage">
 	</div><!-- end of Media -->
@@ -292,7 +301,7 @@ and being part of a wonderful music community
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.262" type="module"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.275" type="module"></script>
     <script src="js/main.js?ver=3.031" type="module"></script>
 
     <!--
